# crane-game

./: README.md  default.nix  shell.nix
godot/: CraneGame.blend  CraneGame.blend.import  CraneGame.blend1  CraneGameRust.gdextension  CraneGameRust.gdextension.uid  export_presets.cfg  icon.svg.import  project.godot
godot/classes/: prize.gd  prize.gd.uid
godot/models/: CraneGame_crane.glb  CraneGame_crane.glb.import  CraneGame_crane_ImphenziaPalette01-256-Gradient.png.import  CraneGame_machine.glb  CraneGame_machine.glb.import  CraneGame_machine_ImphenziaPalette01-256-Gradient.png.import  CraneGame_prize_1.glb  CraneGame_prize_1.glb.import  CraneGame_prize_1_ImphenziaPalette01-256-Gradient.png.import  CraneGame_prize_2.glb  CraneGame_prize_2.glb.import  CraneGame_prize_2_ImphenziaPalette01-256-Gradient.png.import  CraneGame_prize_3.glb  CraneGame_prize_3.glb.import  CraneGame_prize_3_ImphenziaPalette01-256-Gradient.png.import
godot/scenes/: claw.gd  claw.gd.uid  main.gd  main.gd.uid  main.tscn
godot/textures/: Panorama.jpg.import  illu32.png.import
npins/: sources.json
rust/: Cargo.toml  bacon.toml
rust/src/: entrypoint.rs  lib.rs  qr_code.rs  ssh.rs
rust/src/http/: markup.rs  mod.rs  router.rs  script.js  server.rs  style.css
rust/src/http/assets/: htmx-ws.js  htmx.js
